a couple of small additions

--- a/html/about.html
+++ b/html/about.html
@@ -2,8 +2,9 @@
 <head>
     <meta name="description" content="kor">
     <link rel="shortcut icon" type="" href="" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>KOR! records</title>
+    <link rel="shortcut icon" type="media/icons" href="../media/icons/KOR_Icon-03.png" />
 </head>
 <body>
 
@@ -11,7 +12,7 @@
         <h1>KOR! records</h1>
     </header>
 
-    <nav>
+    <nav aria-label="Main Navigation">
         <a href="../index.html">Home</a>
 
         <a href="about.html">Our work</a>
