--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
     <meta name="description" content="kor">
-    <link rel="shortcut icon" type="" href="" />
     <link rel="stylesheet" href="css/style.css" />
     <title>KOR! records</title>
+    <link rel="shortcut icon" type="media/icons" href="media/icons/KOR_Icon-03.png" />
 </head>
 <body>
-    
+    <img src="media/banners/KOR_Web_banner-01.jpg" alt="banner of someone listening to music"/>
     <header>
         <h1>KOR! records</h1>
     </header>
 
-    <nav>
+    <nav aria-label="Main Navigation">
         <a href="index.html">Home</a>
 
         <a href="html/about.html">Our work</a>
