some small changes trying to get in the zone

--- a/html/contact.html
+++ b/html/contact.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="media/icons" href="../media/icons/KOR_Icon-03.png" />
 </head>
 <body>
-
+    <div id="container"><img src="../media/banners/KOR_Web_banner-03.jpg" alt="green and blue textured banner promoting the word noise" /></div>
     <header>
         <h1>KOR! records</h1>
     </header>
@@ -23,16 +23,16 @@
     </nav>
 
     <main>
-
-        <h3><u><a href="https://twitter.com/KORRecords" target="_blank">Twitter</a></u></h3><br/>
-        <h3><u><a href="https://www.facebook.com/KORRecords/" target="_blank">Facebook</a></u></h3><br/>
-        <h3><u><a href="https://soundcloud.com/kor-records" target="_blank">Soundcloud</a></u></h3><br/>
-        <h3><u><a href="https://vimeo.com/korrecords" target="_blank">Vimeo</a></u></h3><br />
-        <h3><u><a href="https://us15.list-manage.com/subscribe?u=59c43c2aa13fa3bc9664f3d0b&id=fb76d678f0" target="_blank">mailing list</a></u></h3><br/>
-        <h3><u><a href="https://korrecords.bandcamp.com/" target="_blank">Bandcamp</a></u></h3>
-
+        <div class="row">
+            <div class="column"><h3><u><a href="https://twitter.com/KORRecords" target="_blank">Twitter</a></u></h3></div><br />
+            <div class="column"><h3><u><a href="https://www.facebook.com/KORRecords/" target="_blank">Facebook</a></u></h3></div><br />
+            <div class="column"><h3><u><a href="https://soundcloud.com/kor-records" target="_blank">Soundcloud</a></u></h3></div><br />
+            <div class="column"><h3><u><a href="https://vimeo.com/korrecords" target="_blank">Vimeo</a></u></h3></div><br />
+            <div class="column"><h3><u><a href="https://us15.list-manage.com/subscribe?u=59c43c2aa13fa3bc9664f3d0b&id=fb76d678f0" target="_blank">mailing list</a></u></h3></div><br />
+            <div class="column"><h3><u><a href="https://korrecords.bandcamp.com/" target="_blank">Bandcamp</a></u></h3></div>
+        </div>
         <article>
-            <h2>Article heading</h2>
+            <h3>Article heading</h3>
             <p>
                 We want to offer an alternative to the fame and money-driven commercial music industry. We want to offer the experience of being in a band and making music to people who are often excluded.
                 We want to experiment with methods of making music collaboratively. We want to increase the number of musicians with additional support needs and their audiences.
@@ -40,7 +40,7 @@
         </article>
 
         <aside>
-            <h2>Related</h2>
+            <h3>Related</h3>
         </aside>
 
     </main>
