--- a/html/projects.html
+++ b/html/projects.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="media/icons" href="../media/icons/KOR_Icon-03.png" />
 </head>
 <body>
-
+    <div id="container"><img src="../media/banners/KOR_Web_banner-04.jpg" alt="edited pink and blue banner that says music inclusive" /></div>
     <header>
         <h1>KOR! records</h1>
     </header>
@@ -27,7 +27,7 @@
         <h2><u>Projects</u></h2><br />
 
         <article>
-            <h2>Article heading</h2>
+            <h3>Article heading</h3>
             <p>
                 We want to offer an alternative to the fame and money-driven commercial music industry. We want to offer the experience of being in a band and making music to people who are often excluded.
                 We want to experiment with methods of making music collaboratively. We want to increase the number of musicians with additional support needs and their audiences.
@@ -35,7 +35,7 @@
         </article>
 
         <aside>
-            <h2>Related</h2>
+            <h3>Related</h3>
         </aside>
 
     </main>
