--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="media/icons" href="media/icons/KOR_Icon-03.png" />
 </head>
 <body>
-    <img src="media/banners/KOR_Web_banner-01.jpg" alt="banner of someone listening to music"/>
+    <div id="container"><img src="media/banners/KOR_Web_banner-06-01-01.jpg" alt="banner of someone listening to music"/></div>
     <header>
         <h1>KOR! records</h1>
     </header>
@@ -24,6 +24,7 @@
     <main>
 
         <p>KOR! is an independent record label that creates music projects for young people with additional support needs & releases their output.</p>
+
         <p>
             Every project is different, just like every young artist we work with is different. We always aim to be responsive to the needs and interests of our participants, and this means the output
             of a project depends on who is making it. So far we have created; EPs, singles, music videos, zines, documentaries and live performances. Our projects have taken place in schools, community
@@ -31,7 +32,7 @@
         </p>
 
         <article>
-            <h2>Article heading</h2>
+            <h3>Article heading</h3>
             <p>
                 We want to offer an alternative to the fame and money-driven commercial music industry. We want to offer the experience of being in a band and making music to people who are often excluded.
                 We want to experiment with methods of making music collaboratively. We want to increase the number of musicians with additional support needs and their audiences.
@@ -39,7 +40,7 @@
         </article>
 
         <aside>
-            <h2>Related</h2>
+            <h3>Related</h3>
         </aside>
 
     </main>
