--- a/html/about.html
+++ b/html/about.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="media/icons" href="../media/icons/KOR_Icon-03.png" />
 </head>
 <body>
-
+    <div id="container"><img src="../media/banners/KOR_Web_banner-02.jpg" alt="pink and blue art that reads seen, heard, amplified" /></div>
     <header>
         <h1>KOR! records</h1>
     </header>
@@ -23,15 +23,20 @@
     </nav>
 
     <main>
-
-        <h3><u>Band Together</u></h3>
-        <p>Regular jam sessions with young people aged fourteen to twenty-five who want to form a band and develop their musical interests and skills.</p>
-
-        <h3><u>School and Community Projects</u></h3>
-        <p>Working with a class or existing community group to explore musical improvisation and performance.</p>
-
-        <h3><u>SWITCH</u></h3>
-        <p>A day-long experimental music event for people interested in music, noise, digital technologies and Doing It Yourself. Workshops and gigs in exciting, accessible venues.</p>
+        <div class="row">
+            <div class="column">
+                <h3><u>Band Together</u></h3>
+                <p>Regular jam sessions with young people aged fourteen to twenty-five who want to form a band and develop their musical interests and skills.</p>
+            </div>
+            <div class="column">
+                <h3><u>School and Community Projects</u></h3>
+                <p>Working with a class or existing community group to explore musical improvisation and performance.</p>
+            </div>
+            <div class="column">
+                <h3><u>SWITCH</u></h3>
+                <p>A day-long experimental music event for people interested in music, noise, digital technologies and Doing It Yourself. Workshops and gigs in exciting, accessible venues.</p>
+            </div>
+        </div>
 
         <article>
             <h2>Article heading</h2>
