moved html pages in to named folders with index.html inside for clean urls and fixed font css

--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <link rel="shortcut icon" type="media/icons" href="media/icons/KOR_Icon-03.png" />
 </head>
 <body>
-    <div id="container"><img src="media/banners/KOR_Web_banner-06-01-01.jpg" alt="banner of someone listening to music"/></div>
+        <div id="container"><img src="media/banners/KOR_Web_banner-06-01-01.jpg" alt="banner of someone listening to music" />
+        </div>
     <header>
         <h1>KOR! records</h1>
     </header>
-
+   
     <nav aria-label="Main Navigation">
-        <a href="index.html">Home</a>
+        <a href="/">Home</a>
 
-        <a href="html/about.html">Our work</a>
+        <a href="/about">Our work</a>
 
-        <a href="html/projects.html">Projects</a>
+        <a href="/projects">Projects</a>
 
-        <a href="html/contact.html">Contact</a>
+        <a href="/contact">Contact</a>
     </nav>
 
     <main>
@@ -44,6 +45,8 @@
         </aside>
 
     </main>
+
+
     <footer>
     </footer>
 </body>
