--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
     <link rel="shortcut icon" type="media/icons" href="media/icons/KOR_Icon-03.png" />
 </head>
 <body>
-        <div id="container"><img src="media/banners/KOR_Web_banner-06-01-01.jpg" alt="banner of someone listening to music" />
+        <div class='banner-container' id='kor'><img src="media/banners/KOR_Web_banner-06-01-01.jpg" alt="banner of someone listening to music" />
         </div>
     <header>
         <h1>KOR! records</h1>
     </header>
    
     <nav aria-label="Main Navigation" id='main-nav'>
-        <a href="#intro">Home</a>
+        <a href="#kor">KOR! records</a>
 
-        <a href="#about">Our work</a>
+        <a href="#about">About</a>
 
         <a href="#projects">Projects</a>
 
         <a href="#contact">Contact</a>
     </nav>
 
-    <main id='intro'>
+    <main>
 
         <p>KOR! is an independent record label that creates music projects for young people with additional support needs & releases their output.</p>
 
@@ -47,7 +47,7 @@
     </main>
 
         <main id='about'>
-                <div id="container"><img src="../media/banners/KOR_Web_banner-02.jpg"
+                <div class='banner-container'><img src="../media/banners/KOR_Web_banner-02.jpg"
                         alt="pink and blue art that reads seen, heard, amplified" /></div>
 
                     <h2><u>About</u></h2><br />
@@ -86,7 +86,7 @@
         </main>
 
     <main id='projects'>
-        <div id="container"><img src="../media/banners/KOR_Web_banner-04.jpg"
+        <div class='banner-container'><img src="../media/banners/KOR_Web_banner-04.jpg"
                 alt="edited pink and blue banner that says music inclusive" /></div>
 
         <h2><u>Projects</u></h2><br />
@@ -108,7 +108,7 @@
     </main>
 
 <main id='contact'>
-        <div id="container"><img src="../media/banners/KOR_Web_banner-03.jpg"
+        <div class='banner-container'><img src="../media/banners/KOR_Web_banner-03.jpg"
                 alt="green and blue textured banner promoting the word noise" /></div>
 
     <div class="row">
