add link to pdf in footer

--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@
 </main>
 
     <footer>
+       <p> KOR! Manifesto PDF <a href='/media/manifesto/KOR_manifesto.pdf' target='_blank'>Open</a> |<a href='/media/manifesto/KOR_manifesto.pdf' download>Download</a></p>
+    &copy; Copyright 2010 -
+    <script>document.write(new Date().getFullYear())</script>, Kor.
     </footer>
 </body>
 </html>
-&copy; Copyright 2010 -
-<script>document.write(new Date().getFullYear())</script>, Kor.
