moved social links in to footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>KOR! records</h1>
     </header>
    
-    <nav aria-label="Main Navigation" id='main-nav'>
+    <nav aria-label="Main Navigation" id='main-nav' class='nav-links'>
         <a href="#kor">KOR! records</a>
 
         <a href="#about">About</a>
@@ -56,7 +56,7 @@
                 <div class="column">
                     <h3><u>Band Together</u></h3>
                     <p>Regular jam sessions with young people aged fourteen to twenty-five who want to form a band and develop
-                        their musical interests and skills.</p>
+                        their musical interests and skills.</p> 
                 </div>
                 <div class="column">
                     <h3><u>School and Community Projects</u></h3>
@@ -111,45 +111,19 @@
         <div class='banner-container'><img src="../media/banners/KOR_Web_banner-03.jpg"
                 alt="green and blue textured banner promoting the word noise" /></div>
 
-    <div class="row">
-        <div class="column">
-            <h3><u><a href="https://twitter.com/KORRecords" target="_blank">Twitter</a></u></h3>
-        </div><br />
-        <div class="column">
-            <h3><u><a href="https://www.facebook.com/KORRecords/" target="_blank">Facebook</a></u></h3>
-        </div><br />
-        <div class="column">
-            <h3><u><a href="https://soundcloud.com/kor-records" target="_blank">Soundcloud</a></u></h3>
-        </div><br />
-        <div class="column">
-            <h3><u><a href="https://vimeo.com/korrecords" target="_blank">Vimeo</a></u></h3>
-        </div><br />
-        <div class="column">
-            <h3><u><a href="https://us15.list-manage.com/subscribe?u=59c43c2aa13fa3bc9664f3d0b&id=fb76d678f0"
-                        target="_blank">mailing list</a></u></h3>
-        </div><br />
-        <div class="column">
-            <h3><u><a href="https://korrecords.bandcamp.com/" target="_blank">Bandcamp</a></u></h3>
-        </div>
-    </div>
-    <article>
-        <h3>Article heading</h3>
-        <p>
-            We want to offer an alternative to the fame and money-driven commercial music industry. We want to offer the
-            experience of being in a band and making music to people who are often excluded.
-            We want to experiment with methods of making music collaboratively. We want to increase the number of
-            musicians with additional support needs and their audiences.
-        </p>
-    </article>
-
-    <aside>
-        <h3>Related</h3>
-    </aside>
 
 </main>
 
     <footer>
        <p> KOR! Manifesto PDF <a href='/media/manifesto/KOR_manifesto.pdf' target='_blank'>Open</a> |<a href='/media/manifesto/KOR_manifesto.pdf' download>Download</a></p>
+    <nav aria-label="Social Navigation" id='social-nav' class='nav-links'>
+        <a href="https://twitter.com/KORRecords" target="_blank">Twitter</a>
+         <a href="https://www.facebook.com/KORRecords/" target="_blank">Facebook</a>
+        <a href="https://soundcloud.com/kor-records" target="_blank">Soundcloud</a>
+        <a href="https://vimeo.com/korrecords" target="_blank">Vimeo</a>
+        <a href="https://us15.list-manage.com/subscribe?u=59c43c2aa13fa3bc9664f3d0b&id=fb76d678f0" target="_blank">mailing list</a>
+        <a href="https://korrecords.bandcamp.com/" target="_blank">Bandcamp</a>
+        </nav>
     &copy; Copyright 2010 -
     <script>document.write(new Date().getFullYear())</script>, Kor.
     </footer>
