spinny logo on scroll...

--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
    <head>
       <meta name="description" content="kor">
       <link rel="stylesheet" href="css/style.css" />
-      <title>KOR! records</title>
+      <title>KOR records</title>
       <link rel="shortcut icon" type="media/icons" href="media/icons/KOR_Icon-03.png" />
    </head>
    <body>
     <nav aria-label="Main Navigation" id='main-nav' class='nav-links'>
-        <a href="#kor">KOR! records</a>
+        <a href="#kor"><img src='media/logos/KOR_black.png' class='title-text' alt='KOR' />        </a>
         <a href="#our-work">Our work</a>
         <a href="#contact">Contact</a>
      </nav>
       <header>
-         <h1>KOR! records</h1>
+        <a href="#main-nav"> <img src='media/logos/kor-wheel.png' class='logo' id='logo' alt='KOR Records' /></a>
+         <!-- <h1>KOR! records</h1> -->
       </header>
       <div class='banner-container' id='kor'><img src="media/banners/KOR_Web_banner-06-01-01.jpg" alt="banner of someone listening to music" />
       </div>
@@ -140,5 +141,6 @@
             <script>document.write(new Date().getFullYear())</script>, Kor.
          </p>
       </footer>
+      <script src='/js/all.js'></script>
    </body>
 </html>
