maybe nav isn't necessary

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
    <body>
     <nav aria-label="Main Navigation" id='main-nav' class='nav-links'>
         <a href="#kor"><img src='media/logos/KOR_black.png' class='title-text' alt='KOR' />        </a>
-        <a href="#our-work">Our work</a>
-        <a href="#contact">Contact</a>
+        <!-- <a href="#our-work">Our work</a>
+        <a href="#contact">Contact</a> -->
      </nav>
       <header>
         <a href="#main-nav"> <img src='media/logos/kor-wheel.png' class='logo' id='logo' alt='KOR Records' /></a>
