--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    </head>
    <body>
     <nav aria-label="Main Navigation" id='main-nav' class='nav-links'>
-        <a href="#kor"><img src='media/logos/KOR_black.png' class='title-text' alt='KOR' />        </a>
+       <img src='media/logos/KOR_black.png' class='title-text' alt='KOR' />       
         <!-- <a href="#our-work">Our work</a>
         <a href="#contact">Contact</a> -->
      </nav>
