nnot stretched image

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <section>
       
-        <div class='banner-container' id='kor'><img src="media/banners/KOR_Web_banner-01.jpg" alt="banner of someone listening to music" />
+        <div class='banner-container'><img src="media/banners/KOR_Web_banner-01.jpg" alt="banner of someone listening to music" />
         </div>
         <h3>Listening as a Political Act</h3>
 
