put the 2 stray manifesto items inside the carousel

--- a/index.html
+++ b/index.html
@@ -99,14 +99,19 @@
                       musicians with additional support needs and their audiences.
                   </p>
               </div>
+              <div class='banner-container'>
+               <h3>More Music, Less Greed</h3>
+               <p>We want to offer an alternative to the fame and money-driven commercial music industry.</p>
+              </div>
+              <div class='banner-container'>
+          <h3>I'm with the Band</h3>
+          <p> We want to experiment with methods of making music collaboratively. </p>
+              </div>
               <ul id="dots" class="list-inline dots"></ul>
           </div>
 
-          <h3>More Music, Less Greed</h3>
-          <p>We want to offer an alternative to the fame and money-driven commercial music industry.</p>
+          
 
-          <h3>I'm with the Band</h3>
-          <p> We want to experiment with methods of making music collaboratively. </p>
 
 
       </section>
