--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   </p>
               </div>
               <div class='banner-container'>
-                  <img src="../media/banners/KOR_Web_banner-03.jpg"
+                  <img src="media/banners/KOR_Web_banner-03.jpg"
                        alt="green and blue textured banner promoting the word noise" />
                   <h3>Noise</h3>
                   <p>
@@ -73,7 +73,7 @@
                   </p>
               </div>
               <div class='banner-container'>
-                  <img src="../media/banners/KOR_Web_banner-05.jpg"
+                  <img src="media/banners/KOR_Web_banner-05.jpg"
                        alt="artist crowd" />
                   <h3>Artist and Crowd</h3>
                   <p>
@@ -81,7 +81,7 @@
                   </p>
               </div>
               <div class='banner-container'>
-                  <img src="../media/banners/KOR_Web_banner-04.jpg"
+                  <img src="media/banners/KOR_Web_banner-04.jpg"
                        alt="edited pink and blue banner that says music inclusive" />
                   <h3>Music Inclusive</h3>
                   <p>
@@ -90,7 +90,7 @@
                   </p>
               </div>
               <div class='banner-container'>
-                  <img src="../media/banners/KOR_Web_banner-02.jpg"
+                  <img src="media/banners/KOR_Web_banner-02.jpg"
                        alt="pink and blue art that reads seen, heard, amplified" />
 
                   <h3>Seen. Heard. Amplified</h3>
@@ -165,6 +165,6 @@
             <script>document.write(new Date().getFullYear())</script>, Kor.
          </p>
       </footer>
-      <script src='/js/all.js'></script>
+      <script src='js/all.js'></script>
    </body>
 </html>
