--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang='en'>
    <head>
       <meta name="description" content="kor">
       <link rel="stylesheet" href="css/style.css" />
