carousel autoplay and pause with loader

--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
           <h3>I'm with the Band</h3>
           <p> We want to experiment with methods of making music collaboratively. </p>
               </div>
+              <div id='slide-loader'></div>
+
               <ul id="dots" class="list-inline dots"></ul>
           </div>
-
           
 
 
