--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang='en'>
    <head>
       <meta name="description" content="kor">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
       <link rel="stylesheet" href="css/style.css" />
       <title>KOR records</title>
       <link rel="shortcut icon" type="media/icons" href="media/icons/KOR_Icon-03.png" />
