--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       <link rel="shortcut icon" type="media/icons" href="media/icons/KOR_Icon-03.png" />
    </head>
    <body>
+
+      <div id='body-container'>
+
     <nav aria-label="Main Navigation" id='main-nav' class='nav-links'>
        <img src='media/logos/KOR_black.png' class='title-text' alt='KOR' />       
         <!-- <a href="#our-work">Our work</a>
@@ -22,12 +25,13 @@
       <section>
          <article>
             <p>KOR! is an independent record label that creates music projects for young people with additional support needs & releases their output.</p>
+            <p><a href="https://korrecords.bandcamp.com/" target="_blank">Shop</a></p>
          </article>
       </section>
 
-
       <section>
           <div id="slider" class="slider">
+            <div id='slide-loader'></div>
               <div class='banner-container active'>
                   <img src="media/banners/KOR_Web_banner-01.jpg" alt="banner of someone listening to music" />
                   <h3>Listening as a Political Act</h3>
@@ -78,7 +82,6 @@
           <h3>I'm with the Band</h3>
           <p> We want to experiment with methods of making music collaboratively. </p>
               </div>
-              <div id='slide-loader'></div>
 
               <ul id="dots" class="list-inline dots"></ul>
           </div>
@@ -120,13 +123,12 @@
       </section>
   
       <footer id='contact'>
-        </div>
-         <p> KOR! Manifesto PDF <a href='/media/manifesto/KOR_manifesto.pdf' target='_blank'>Open</a> | <a href='/media/manifesto/KOR_manifesto.pdf' download>Download</a></p>
+         <p> KOR! Manifesto PDF: <a href='/media/manifesto/KOR_manifesto.pdf' target='_blank'>Open</a> | <a href='/media/manifesto/KOR_manifesto.pdf' download>Download</a></p>
          <div>
             <nav aria-label="Social Navigation" class='nav-links'>
+               <a href="https://korrecords.bandcamp.com/" target="_blank">Bandcamp</a> |
                <a href="https://vimeo.com/korrecords" target="_blank">Vimeo</a> |
                <a href="https://soundcloud.com/kor-records" target="_blank">Soundcloud</a> |
-               <a href="https://korrecords.bandcamp.com/" target="_blank">Bandcamp</a>
             </nav>
          </div>
          <div>
@@ -148,6 +150,7 @@
             <script>document.write(new Date().getFullYear())</script>, Kor.
          </p>
       </footer>
+   </div>
       <script src='js/all.js'></script>
    </body>
 </html>
