minor updates requested

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <meta name="description" content="kor">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
       <link rel="stylesheet" href="css/style.css" />
-      <title>KOR records</title>
+      <title>KOR! Records</title>
       <link rel="shortcut icon" type="media/icons" href="media/icons/KOR_Icon-03.png" />
    </head>
    <body>
@@ -24,8 +24,7 @@
 
       <section>
          <article>
-            <p>KOR! is an independent record label that creates music projects for young people with additional support needs & releases their output.</p>
-            <p><a href="https://korrecords.bandcamp.com/" target="_blank">Shop</a></p>
+            <p>KOR! Records is an independent record label that creates music projects for young people with additional support needs & <a href="https://korrecords.bandcamp.com/" target="_blank">releases</a> their output.</p>
          </article>
       </section>
 
@@ -147,7 +146,7 @@
          </div>
          <p>
             &copy; Copyright 2010 -
-            <script>document.write(new Date().getFullYear())</script>, Kor.
+            <script>document.write(new Date().getFullYear())</script>, KOR! Records
          </p>
       </footer>
    </div>
