--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                   <p>
                       KOR! Records are seeking a Trainee to work on their 2019 Young Artist Programme and SWITCH in Easterhouse, Glasgow.<br />
 
-                      <header>About KOR! Young Artists Programme</header>
+                  <header>About KOR! Young Artists Programme</header>
 
-                  <p>After successfully running similar projects since 2016, KOR! Records have received funding from Creative Scotland’s Youth Music Initiative to deliver the KOR! Young Artists Programme and SWITCH in Glasgow.</p>
+                  <p>After successfully running similar projects since 2016, KOR! Records have received funding from Creative Scotland's Youth Music Initiative to deliver the KOR! Young Artists Programme and SWITCH in Glasgow.</p>
 
                   <p>The KOR! Young Artists Programme is a continuation of projects started over the past 4 years, supporting the experimental music making of young musicians with additional support needs. Currently, KOR! Records works with young people through two projects in Glasgow and one in West Lothian. Each group experiment with sound, explore ways of collaborating and listening, and create new music and noise. Working with KOR! Records staff and guest musicians the groups work towards creating and sharing their creative output. Previously this has been through the creation of a music video, a live performance or an EP release.</p>
 
@@ -65,17 +65,17 @@
                       <li>Can attend SWITCH 2019 all day on October 11th.</li>
                       <li>Can contribute to feedback and evaluation of the project, and document their experience through a blog (this can be through written content, videos, audio documentation, or another creative way of documenting)</li>
                       <li>Is 18 or over.</li>
-                      <li>The trainee with be paid £2073.60 (£21.60 per hour, 8 hours per week for 12 weeks) plus contribution to travel costs. KOR! Records will also provide funding to enable the trainee to access specific additional training opportunities which will be identified in collaboration with the trainee to focus on their specific areas of interest or development.</li>
+                      <li>The trainee with be paid &pound;2073.60 (&pound;21.60 per hour, 8 hours per week for 12 weeks) plus contribution to travel costs. KOR! Records will also provide funding to enable the trainee to access specific additional training opportunities which will be identified in collaboration with the trainee to focus on their specific areas of interest or development.</li>
                   </ul>
                   <header>Access</header>
 
-                  <p>KOR! Records are committed to creating sustainable and supportive working environments for it’s staff. We welcome applicants from everyone and are committed to taking an active role in meeting the access needs of applicants. If you have any questions or concerns about any barriers to accessing this opportunity that you might have then please get in touch. Interviews and workshops will be held in wheelchair accessible buildings.</p>
+                  <p>KOR! Records are committed to creating sustainable and supportive working environments for it's staff. We welcome applicants from everyone and are committed to taking an active role in meeting the access needs of applicants. If you have any questions or concerns about any barriers to accessing this opportunity that you might have then please get in touch. Interviews and workshops will be held in wheelchair accessible buildings.</p>
 
                   <header>How to Apply</header>
 
-                  <p>Please send an email outlining your interest in the project and any relevant experience by June 24th to applications@kor-records.co.uk
+                  <p>Please send an email outlining your interest in the project and any relevant experience by June 24th to <a href="mailto:applications@kor-records.co.uk">applications@kor-records.co.uk</a>.
 
-                  We welcome applications in written format, video or audio recording, or any other way that we haven’t thought of that would enable you to best apply for the role. If you apply via video or audio recording please keep you application under 10 minutes.
+                  We welcome applications in written format, video or audio recording, or any other way that we haven't thought of that would enable you to best apply for the role. If you apply via video or audio recording please keep you application under 10 minutes.
 
                   Interviews will take place in Glasgow or over Skype on week commencing July 8th.</p>
               </div>
