changed link colour to make more visible against the black. gave spinny wheel a bit of colour, added some HRs

--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
 
     <nav aria-label="Main Navigation" id='main-nav' class='nav-links'>
        <img src='media/logos/KOR_black.png' class='title-text' alt='KOR' />       
-        <!-- <a href="#our-work">Our work</a>
-        <a href="#contact">Contact</a> -->
      </nav>
+
       <header>
-        <a href="#main-nav"> <img src='media/logos/kor-wheel.png' class='logo' id='logo' alt='KOR Records' /></a>
-         <!-- <h1>KOR! records</h1> -->
+        <a href="#main-nav"> <img src='media/logos/kor-wheel-black-bg.png' class='logo' id='logo' alt='KOR Records' /></a>
       </header>
-      <div class='banner-container header-banner' id='kor'>
-      </div>
+
+      <div class='banner-container header-banner' id='kor'></div>
 
       <section>
          <article>
@@ -28,12 +26,18 @@
          </article>
       </section>
       <section>
-          To see our latest opportunities, <a href ="#" button id="myBtn">click here</a>
+<hr/>
+         <section>
+          <p><strong>Trainee Opportunity</strong> - August 2019 (<a href="#latest" button id="myBtn">more info</a>)</p>
+</section>
           
           <div id="myModal" class="modal">
 
               <div class="modal-content">
                   <span class="close">&times;</span>
+
+                  <h3><strong>Trainee Opportunity</strong> - August 2019</h3>
+
                   <p>
                       KOR! Records are seeking a Trainee to work on their 2019 Young Artist Programme and SWITCH in Easterhouse, Glasgow.<br />
 
@@ -128,19 +132,20 @@
                       musicians with additional support needs and their audiences.
                   </p>
               </div>
-              <div class='banner-container'>
+              <!-- <div class='banner-container'>
                <h3>More Music, Less Greed</h3>
                <p>We want to offer an alternative to the fame and money-driven commercial music industry.</p>
               </div>
               <div class='banner-container'>
           <h3>I'm with the Band</h3>
           <p> We want to experiment with methods of making music collaboratively. </p>
-              </div>
+              </div> -->
 
               <ul id="dots" class="list-inline dots"></ul>
           </div>
       </section>
 
+      <hr/>
       <section>
          <article>           
             <p>
