--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
    <head>
       <meta name="description" content="kor">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
-      <link rel="stylesheet" href="css/style.css" />
+      <link rel="stylesheet" href="css/style.css?1" />
       <title>KOR! Records</title>
       <link rel="shortcut icon" type="media/icons" href="media/icons/KOR_Icon-03.png" />
    </head>
@@ -210,6 +210,6 @@
          </p>
       </footer>
    </div>
-      <script src='js/all.js'></script>
+      <script src='js/all.js?1'></script>
    </body>
 </html>
