--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <section>
 <hr/>
          <section>
-          <p><strong>Trainee Opportunity</strong> - August 2019 (<a href="#latest" button id="myBtn">more info</a>)</p>
+          <p><strong>DEMO Recruitment Opportunity</strong> - March 2022 (<a href="#latest" button id="myBtn">more info</a>)</p>
 </section>
           
           <div id="myModal" class="modal">
@@ -36,52 +36,25 @@
               <div class="modal-content">
                   <span class="close">&times;</span>
 
-                  <h3><strong>Trainee Opportunity</strong> - August 2019</h3>
+                  <h3><strong>DEMO Opportunity</strong> - March 2022</h3>
 
-                  <p>
-                      KOR! Records are seeking a Trainee to work on their 2019 Young Artist Programme and SWITCH in Easterhouse, Glasgow.<br />
+                  <p> Experimental Music Project<br />
+                      Fridays 5-6.30pm (Starting 4th March)<br />
+                      Platform, The Bridge, 1000 Westerhouse Road, Easterhouse, Glasgow, G34 9JW<br/>
 
-                  <header>About KOR! Young Artists Programme</header>
+                  <p>During the 10 week project we will explore and create new sounds/music and by the end we will have something recorded as a DEMO.</p>
 
-                  <p>After successfully running similar projects since 2016, KOR! Records have received funding from Creative Scotland's Youth Music Initiative to deliver the KOR! Young Artists Programme and SWITCH in Glasgow.</p>
+                  <p>What we make will depend on the interests of the small group. The project is open to anyone interested in making noise/music. You might already play an instrument or have some lyrics written or you might have no musical experience but an interest in trying something out.</p>
 
-                  <p>The KOR! Young Artists Programme is a continuation of projects started over the past 4 years, supporting the experimental music making of young musicians with additional support needs. Currently, KOR! Records works with young people through two projects in Glasgow and one in West Lothian. Each group experiment with sound, explore ways of collaborating and listening, and create new music and noise. Working with KOR! Records staff and guest musicians the groups work towards creating and sharing their creative output. Previously this has been through the creation of a music video, a live performance or an EP release.</p>
+                  <p>In the sessions we will work in a small group with a chance to focus on everyone’s ideas.</p>
 
-                  <p>SWITCH 2019 is an accessible live music event at Platform. Since 2016 SWITCH has been a gig that showcases experimental music and collaborations, with a focus on highlighting the work of young musicians and bands with additional support needs. In previous years SWITCH has been a platform for exciting new and existing bands formed as park for KOR! Records projects, and other organisations or bands.  It is also a showcase of new collaborations between artists, and a gig event designed to be accessible to a wide audience of experimental music fans.</p>
+                  <p>The project is aimed at young people 12+ with additional support needs*.<br/>
+                     The project has been funded by Creative Scotland YMI fund and will be free for all participants.
+                  </p>
 
-                  <header>When and Where</header>
+                  <p>If you are interested or have any questions please contact: contact@kor-records.co.uk</p>
 
-                  <p>The trainee will work for 8 hours per week for 12 weeks at KOR! Records sessions in Glasgow, and at SWITCH 2019, as well as attending other training opportunities which will be identified with the trainee.</p>
-
-                  <p>Workshop sessions take place on Friday and Saturday daytime from w/c August 12th 2019, until the end of October 2019.</p>
-
-                  <p>SWITCH will take place at Platform on October 11th 2019.</p>
-
-                  <header>Role of the Trainee</header>
-
-                  <p>The aim of the traineeship is to offer training and experience in working with people with additional support needs and experimental music/noise. This is a position suited to someone who has recently started working in this area, or who is totally new to this area of work, and is looking to expand their knowledge, skills and experience. Formal training in music/sound is not required.</p>
-
-                  KOR! Records are looking for someone who:
-                  <ul>
-                      <li>Has an interest in experimental music, noise and sound.</li>
-                      <li>Is looking to develop their skills and experience working with young people with additional support needs.</li>
-                      <li>Is able to assist weekly sessions, on Friday day times and/or Saturday day times (the equivalent of 8 hours per week for 12 weeks, starting w/c August 12th 2019)</li>
-                      <li>Can attend SWITCH 2019 all day on October 11th.</li>
-                      <li>Can contribute to feedback and evaluation of the project, and document their experience through a blog (this can be through written content, videos, audio documentation, or another creative way of documenting)</li>
-                      <li>Is 18 or over.</li>
-                      <li>The trainee with be paid &pound;2073.60 (&pound;21.60 per hour, 8 hours per week for 12 weeks) plus contribution to travel costs. KOR! Records will also provide funding to enable the trainee to access specific additional training opportunities which will be identified in collaboration with the trainee to focus on their specific areas of interest or development.</li>
-                  </ul>
-                  <header>Access</header>
-
-                  <p>KOR! Records are committed to creating sustainable and supportive working environments for it's staff. We welcome applicants from everyone and are committed to taking an active role in meeting the access needs of applicants. If you have any questions or concerns about any barriers to accessing this opportunity that you might have then please get in touch. Interviews and workshops will be held in wheelchair accessible buildings.</p>
-
-                  <header>How to Apply</header>
-
-                  <p>Please send an email outlining your interest in the project and any relevant experience by June 24th to <a href="mailto:applications@kor-records.co.uk">applications@kor-records.co.uk</a>.
-
-                  We welcome applications in written format, video or audio recording, or any other way that we haven't thought of that would enable you to best apply for the role. If you apply via video or audio recording please keep you application under 10 minutes.
-
-                  Interviews will take place in Glasgow or over Skype on week commencing July 8th.</p>
+                  <p>*We use Additional Support Needs as a broad term meaning Disabled, Deaf, Autistic, Neuordiverse or if you feel you might benefit from working in a small group or have previously struggled to access music making.</p>
               </div>
 
           </div>
