correcting character encoding

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                   <p>What we make will depend on the interests of the small group. The project is open to anyone interested in making noise/music. You might already play an instrument or have some lyrics written or you might have no musical experience but an interest in trying something out.</p>
 
-                  <p>In the sessions we will work in a small group with a chance to focus on everyone’s ideas.</p>
+                  <p>In the sessions we will work in a small group with a chance to focus on everyone's ideas.</p>
 
                   <p>The project is aimed at young people 12+ with additional support needs*.<br/>
                      The project has been funded by Creative Scotland YMI fund and will be free for all participants.
