adding new text on main page

--- a/index.html
+++ b/index.html
@@ -130,9 +130,8 @@
       
             <div class="row">
                <div class="column">
-                  <h3>Band Together</h3>
-                  <p>Regular jam sessions with young people aged fourteen to twenty-five who want to form a band and develop
-                     their musical interests and skills.
+                  <h3>Bespoke Sessions</h3>
+                  <p>One off workshops or short term projects designed to meet the interests and needs of a group.
                   </p>
                </div>
                <div class="column">
@@ -141,8 +140,7 @@
                </div>
                <div class="column">
                   <h3>SWITCH</h3>
-                  <p>A day-long experimental music event for people interested in music, noise, digital technologies and Doing
-                     It Yourself. Workshops and gigs in exciting, accessible venues.
+                  <p>A music event bringing together projects we’ve worked on over the year. This has included workshops and gigs in exciting accessible venues.
                   </p>
                </div>
             </div>
