another encoding issue

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                </div>
                <div class="column">
                   <h3>SWITCH</h3>
-                  <p>A music event bringing together projects we’ve worked on over the year. This has included workshops and gigs in exciting accessible venues.
+                  <p>A music event bringing together projects we've worked on over the year. This has included workshops and gigs in exciting accessible venues.
                   </p>
                </div>
             </div>
