--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0;url=https://kor-recods.co.uk" />
+<meta http-equiv="refresh" content="0;url=https://kor-records.co.uk" />
 <title>Page Moved</title>
 </head>
 <body>
-This page has moved. Click <a href="https://kor-recods.co.uk">here</a> to go to the new page.
+This page has moved. Click <a href="https://kor-records.co.uk">here</a> to go to the new page.
 </body>
 </html>
